--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 3、建设单位：成都顶新包装有限公司<br>
 4、验收监测（调查）单位：四川以勒科技有限公司<br>
 公示日期：2019年7月1日 <br>
-</p>
+</p><br>
+<a href="验收意见及签到表.pdf" target="_blank">验收意见及签到表</a><br>
+<a href="（废气、废水、噪声）-顶新包装验收监测报告表-修改.pdf" target="_blank">（废气、废水、噪声）-顶新包装验收监测报告表-修改</a>
  </body>
 </html>
